# backend

./: .database.db  .flaskenv  README.md  pyproject.toml
src/backend/: run.py
src/backend/databaseHandling/: __init__.py  schema.sql
src/backend/flaskInterface/: __init__.py  config.py  routes.py
